--- a/build-hists.ipynb
+++ b/build-hists.ipynb
@@ -96,7 +96,18 @@
     "    plot_confusion(hist, f\"Average Histogram for '{param}' = '{value}' (averaged over {amount} experiments)\")\n",
     "\n",
     "setup_dummy_results()\n",
-    "plot_confusion(exp_to_hist(RESULTS_FOLDER / \"exp1\"), \"exp1\")"
+    "plot_confusion(exp_to_hist(RESULTS_FOLDER / \"exp1\"), \"exp1\")\n",
+    "\n",
+    "def plot_efficiency(diff_layers):\n",
+    "    for exp_path in RESULTS_FOLDER.iterdir():\n",
+    "        conditions_path = exp_path / \"conditions.json\"\n",
+    "        if not conditions_path.exists():\n",
+    "            continue\n",
+    "\n",
+    "        with open(conditions_path) as f:\n",
+    "            metadata = json.load(f)\n",
+    "        if metadata[\"num_diff_layers\"] == diff_layers:\n",
+    "            "
    ]
   }
  ],
